# opencv_contrib

modules/car_detection/: CMakeLists.txt  README.md
modules/car_detection/data/: list.txt
modules/car_detection/doc/: car_detection.bib
modules/car_detection/include/opencv2/: car_detection.hpp
modules/car_detection/misc/python/: result_processor.py
modules/car_detection/samples/: Detection_2048.cpp
modules/car_detection/src/: Grouping.hpp  car_detection.cpp
modules/car_detection_in_3D_poind_cloud/: README.md  compile.sh  requirements.txt
modules/car_detection_in_3D_poind_cloud/src/core/: CMakeLists.txt  tester.cpp
modules/car_detection_in_3D_poind_cloud/src/data/: data_preprocessor.py
modules/car_detection_in_3D_poind_cloud/src/opencvCustomOps/: Calculate.hpp  GreaterLayer.hpp  Sampling.hpp
modules/car_detection_in_3D_poind_cloud/src/vis/: kitti_util.py  show.py  viz_util.py
